--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,16 @@ spring.jpa.hibernate.ddl-auto=update
 # (Opcional, pero recomendado) Muestra en la consola el código SQL que
 # Spring está ejecutando por detrás. Muy útil para depurar.
 spring.jpa.show-sql=true
+
+# ===================================================================
+# CONFIGURACIÓN DE GOOGLE CLOUD STORAGE (Sprint 3)
+# ===================================================================
+gcs.bucket.name=libratrack-uploads-tfg-tuyo
+spring.cloud.gcp.credentials.location=classpath:gcs-credentials.json
+
+# ===================================================================
+# CONFIGURACIÓN DE SUBIDA DE ARCHIVOS (Sprint 3 - Corrección)
+# ===================================================================
+# Aumentamos los límites para la subida de imágenes (por defecto son 1MB/10MB)
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
