--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.0</version>
+		<version>3.5.7</version>
 		<relativePath/> </parent>
 
 	<groupId>com.libratrack</groupId>
-	<artifactId>libra-track-api</artifactId>
+	<artifactId>libratrack-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>libra-track-api</name>
+	<name>libratrack-api</name>
 	<description>API RESTful para el proyecto LibraTrack</description>
 	<url/>
 	<licenses>
@@ -29,9 +29,9 @@
 	</scm>
 
 	<properties>
-		<java.version>17</java.version>
-		<spring-cloud.version>2023.0.2</spring-cloud.version>
-		<spring-cloud-gcp.version>5.0.0</spring-cloud-gcp.version>
+		<java.version>21</java.version>
+		<spring-cloud.version>2025.0.0</spring-cloud.version>
+		<spring-cloud-gcp.version>7.4.1</spring-cloud-gcp.version>
 	</properties>
 
 	<dependencyManagement>
@@ -91,21 +91,22 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
-			<version>0.11.5</version>
+			<version>0.12.5</version>
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
-			<version>0.11.5</version>
+			<version>0.12.5</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
-			<version>0.11.5</version>
+			<version>0.12.5</version>
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
