--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,28 @@
 # ===================================================================
-# CONFIGURACIÓN DE LA BASE DE DATOS (MySQL)
+# CONFIGURACIÓN DE LA BASE DE DATOS (MySQL / MariaDB)
 # ===================================================================
 
-# Esta es la dirección de tu base de datos XAMPP.
-# Apunta a la base de datos 'libratrack_db' que acabas de crear.
 spring.datasource.url=jdbc:mysql://localhost:3306/libratrack_db
-
-# Usuario y contraseña de XAMPP.
-# Por defecto, el usuario es 'root' y la contraseña está vacía.
 spring.datasource.username=root
 spring.datasource.password=
-
-# El driver/traductor de MySQL que añadimos en el Spring Initializr.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===================================================================
 # CONFIGURACIÓN DE JPA (LA MAGIA DE SPRING BOOT)
 # ===================================================================
 
-# Esta es la línea más importante.
-# 'update' le dice a Spring Boot: "Mira mis clases de Java (las Entidades que
-# programaremos) y crea o actualiza automáticamente las tablas en la
-# base de datos 'libratrack_db' para que coincidan".
 spring.jpa.hibernate.ddl-auto=update
-
-# (Opcional, pero recomendado) Muestra en la consola el código SQL que
-# Spring está ejecutando por detrás. Muy útil para depurar.
 spring.jpa.show-sql=true
+
+# --- ¡LÍNEA AÑADIDA (ID: QA-084)! ---
+# Desactiva Open-In-View para un mejor manejo de la conexión (Buena Práctica)
+spring.jpa.open-in-view=false
+
+# --- ¡LÍNEA AÑADIDA (ID: QA-086)! ---
+# Forzamos el dialecto de MariaDB para que coincida con el nuevo XAMPP
+# y evitar el error de autodetección 'Unable to determine Dialect'.
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
 
 # ===================================================================
 # CONFIGURACIÓN DE GOOGLE CLOUD STORAGE (Sprint 3)
@@ -37,6 +33,14 @@ spring.cloud.gcp.credentials.location=classpath:gcs-credentials.json
 # ===================================================================
 # CONFIGURACIÓN DE SUBIDA DE ARCHIVOS (Sprint 3 - Corrección)
 # ===================================================================
-# Aumentamos los límites para la subida de imágenes (por defecto son 1MB/10MB)
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# ===================================================================
+# CONFIGURACIÓN DE TOKENS (Sprint 10 - Refresh Tokens)
+# ===================================================================
+# Duración del Token de Refresco (7 días)
+libratrack.app.jwtRefreshExpirationMs=604800000
+
+# Duración del Token de Acceso (30 minutos)
+libratrack.app.jwtAccessExpirationMs=1800000
