--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 # ===================================================================
 # CONFIGURACIÓN DE LA BASE DE DATOS (MySQL / MariaDB)
 # ===================================================================
-
 spring.datasource.url=jdbc:mysql://localhost:3306/libratrack_db
 spring.datasource.username=root
 spring.datasource.password=
@@ -10,19 +9,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ===================================================================
 # CONFIGURACIÓN DE JPA (LA MAGIA DE SPRING BOOT)
 # ===================================================================
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-# --- ¡LÍNEA AÑADIDA (ID: QA-084)! ---
-# Desactiva Open-In-View para un mejor manejo de la conexión (Buena Práctica)
 spring.jpa.open-in-view=false
-
-# --- ¡LÍNEA AÑADIDA (ID: QA-086)! ---
-# Forzamos el dialecto de MariaDB para que coincida con el nuevo XAMPP
-# y evitar el error de autodetección 'Unable to determine Dialect'.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-
 
 # ===================================================================
 # CONFIGURACIÓN DE GOOGLE CLOUD STORAGE (Sprint 3)
@@ -39,8 +29,11 @@ spring.servlet.multipart.max-request-size=10MB
 # ===================================================================
 # CONFIGURACIÓN DE TOKENS (Sprint 10 - Refresh Tokens)
 # ===================================================================
-# Duración del Token de Refresco (7 días)
 libratrack.app.jwtRefreshExpirationMs=604800000
-
-# Duración del Token de Acceso (30 minutos)
 libratrack.app.jwtAccessExpirationMs=1800000
+
+# ===================================================================
+# CONFIGURACIÓN DE GOOGLE SIGN-IN (Sprint 10)
+# ===================================================================
+# (¡REEMPLAZA ESTO con tu ID de cliente WEB de la Consola de Google!)
+libratrack.app.googleWebClientId=1078651925823-g53s0f6i4on4ugdc0t7pfg11vpu86rdp.apps.googleusercontent.com
